# tablex

./: .gitignore  Cargo.toml  LICENSE  README.md
tablex/: Cargo.toml
tablex-derive/: Cargo.toml
tablex-derive/src/: lib.rs
tablex-rusqlite/: Cargo.toml
tablex-rusqlite-derive/: Cargo.toml
tablex-rusqlite-derive/src/: lib.rs
tablex-rusqlite-from-row-derive/: Cargo.toml
tablex-rusqlite-from-row-derive/src/: lib.rs
tablex-rusqlite-params-derive/: Cargo.toml
tablex-rusqlite-params-derive/src/: lib.rs
tablex-rusqlite-table-derive/: Cargo.toml
tablex-rusqlite-table-derive/src/: lib.rs
tablex-rusqlite-test/: Cargo.toml
tablex-rusqlite-test/src/: main.rs
tablex-rusqlite/src/: builder.rs  create_table.rs  executor.rs  exts.rs  from_row.rs  lib.rs  meta.rs  params.rs  sql.rs  sql_table.rs  sql_types.rs
tablex-rusqlite/src/sql/: create_table.rs  drop_table.rs  insert_row.rs  returning_row.rs  select_rows.rs
tablex-test/: Cargo.toml
tablex-test/src/: main.rs
tablex/src/: column.rs  lib.rs  table_info.rs
