[package]
name = "tablex-rusqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
tablex = { path = "../tablex" }
tablex-rusqlite-table-derive = { path = "../tablex-rusqlite-table-derive" }
tablex-rusqlite-params-derive = { path = "../tablex-rusqlite-params-derive" }
tablex-rusqlite-from-row-derive = { path = "../tablex-rusqlite-from-row-derive" }
rusqlite = "0.37"